<resources>
    <string name="app_name">Sportsfreund</string>
    <string name="back">Zurück</string>
    <string name="main_message">Aktivitäten in deiner Nähe:</string>
    <string name="drawer_account">Profil</string>
    <string name="drawer_debugActivity">DebugHelper</string>
    <string name="drawer_simulation">SIMULATION</string>
    <string name="account_text">Du bist momentan mit folgender Mailadresse angemeldet:</string>
    <string name="sign_out">Abmelden</string>
    <string name="sign_out_failed">Die Registrierung ist fehlgeschlagen. Bist du vielleicht schon registriert?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration_request">Bitte registriere dich, damit du alle Funktionen der Sportsfreund-App nutzen kannst!</string>
    <string name="login_request">Bitte melde dich an, damit du alle Funktionen der Sportsfreund-App nutzen kannst!</string>

    <string name="button_login_text">Mit dieser Mail anmelden</string>
    <string name="button_link_to_login_text">Ich bin bereits registriert!</string>
    <string name="button_link_to_signUp_text">Ich bin noch nicht registriert!</string>
    <string name="button_forgot_password">Oh weh, ich habe mein Passwort vergessen!</string>
    <!-- x: \u274C gps marker: \u2316 -->
    <string name="distanceNotAvailable">no GPS!</string>
    <string name="enter_email">Bitte trage deine Email-Adresse ein!</string>
    <string name="enter_password">Bitte trage ein Passwort ein!</string>
    <string name="password_too_short">Dein Passwort ist zu kurz, verwende wenigstens 6 Zeichen!</string>
    <string name="explain_password_reset">Bitte trage deine Email-Adresse ein, damit wir dein Passwort zurücksetzen können!</string>
    <string name="reset_password">Passwort zurücksetzen</string>
    <string name="send_mail_failed">Das Senden der Reset-Mail ist leider fehlgeschlagen. Bitte registriere dich mit einer anderen Mailadresse!</string>
    <string name="send_mail_successful">Wir haben dir gerade Anweisungen zum Zurücksetzen deines Passworts geschickt.</string>
    <string name="registration_button">Registrieren</string>
    <string name="login_failed">Die Anmeldung hat nicht funktioniert, bitte prüfe nochmals Email und Passwort!</string>
    <string name="games_signed_in">Meine nächsten Spiele</string>
    <string name="games_nearby">Spiele in der Umgebung</string>
    <string name="new_game">Neues Spiel</string>
    <string name="newGame_dateIsEntered">"%1$s"</string>
    <string name="newGame_timeIsEntered">%1$s Uhr</string>
    <string name="newGame_locationIsEntered">Ort festgelegt; über GoogleMaps ändern?</string>
    <string name="make_new_game">Spiel erstellen</string>
    <string name="what_game">Welches Spiel willst du spielen?</string>
    <string name="hint_time">Uhrzeit festlegen</string>
    <string name="hint_date">Datum festlegen</string>
    <string name="find_place">Ort festlegen</string>
    <string name="label_name">Art des Spiels</string>
    <string name="label_time">Zeit</string>
    <string name="place_game">Ort</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_ned">noch nicht gesetz</string>
    <string name="db_game_node">games</string>
    <string name="gameDetails_ActionBar">Details</string>
    <string name="gameDetails_participantsHeader">Teilnehmer:</string>
    <string name="gameDetails_participantYou">du selbst</string>
    <string name="button_participate">Teilnehmen</string>
    <string name="button_resign">Absagen</string>
    <string name="participant_already_added">Du bist bereits für das Spiel angemeldet!</string>
    <string name="participant_not_there">Nicht möglich, denn du bist gar nicht für das Spiel angemeldet!</string>
    <string name="dummy">Dummy</string>
    <string name="label_date">Datum</string>
    <string name="gps_message">Du musst den Zugriff auf den Standort erlauben um Sportsfreund richtig nutzen zu können.</string>
    <string name="gps_title">Achtung</string>
    <string name="positive_button_text">Erlauben</string>
    <string name="negative_button_text">Weiter ohne GPS</string>
    <string name="notification_text_participant_left">1 Teilnehmer hat sich abgemeldet. Bist du weiterhin dabei?</string>
    <string name="notification_text_new_participant">1 neuer Teilnehmer. Bist du auch weiterhin dabei?</string>
    <string name="notification_text_participate">Ja</string>
    <string name="notification_text_unregister">absagen</string>
    <string name="signUp_successful">Du bist jetzt registriert und angemeldet!</string>
    <string name="toast_game_added">Spiel wurde erstellt!</string>
    <string name="toast_game_deleted">Spiel wurde gelöscht: </string>
    <string name="toast_add_game_failed">Sorry, dein Spiel konnte nicht erstellt werden. Bitte versuche es später noch einmal!</string>
    <string name="toast_removedRandomParticipant">Der zufällige Teilnehmer wurde vom Spiel abgemeldet</string>
    <string name="toast_removedYou">Okay, du wurdest soeben abgemeldet</string>
    <string name="toast_enterDateAndTime">Bitte wähle sowohl ein Datum als auch eine Uhrzeit aus!</string>
    <string name="toast_enterNameOfGame">Bitte gib einen Namen für das Spiel an!</string>
    <string name="toast_refreshed">Ansicht wurde aktualisiert</string>
    <string name="toast_locationNotFound">Dein aktueller Ort konnte leider nicht ermittelt werden!</string>
    <string name="title_maps_instruction">Anleitung</string>
    <string name="ok">OK</string>
    <string name="text_maps_instruction">Ziehen Sie den Marker zu der Stelle auf der Karte, die Sie als Treffpunkt festlegen wollen</string>
    <string name="text_maps_verify">Wollen sie diesen Ort als Treffpunkt übernehmen?</string>
    <string name="marker_title">Ort des Spiels</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="toastReminder">Okay, wir werden die später nochmals erinnern!</string>
    <string name="ACTION_UNREGISTER_FROM_GAME">de.ur.mi.android.sportsfreund.UNREGISTER_FROM_GAME</string>
    <string name="ACTION_PARTICIPATE">de.ur.mi.android.sportsfreund.PARTICIPATE</string>
    <string name="toastThanksForFeedback">Deine SPORTSFREUNDe sagen Danke für dein Feedback!</string>
    <string name="toast_enterFutureDateTime">Bitte wähle für das Spiel einen Zeitpunkt, der in der Zukunft liegt!</string>
    <string name="title_activity_simulation">SimulationActivity</string>

    <string name="simulation_explanation">Liebe Korrektoren, nutzen Sie bitte diese Activity, um ohne ein zweites Android-Gerät unser Push-Notification-Feature zu testen.</string>
    <string name="simulation_addTestGame">Spiel \'Testspiel\' mit einem Test-Teilnehmer erstellen</string>
    <string name="simulation_testuserid">testuser_id</string>
    <string name="testgame_name">Testspiel</string>
    <string name="simulation_addParticipant">Mich zum Spiel \'Testspiel\' hinzufügen</string>
    <string name="simulation_explanation_2">Wenn Sie jetzt einen der beiden folgenden Buttons drücken, sollten Sie eine Notification erhalten. Bitte beachten Sie, dass keine sonstigen Notifications auf Ihrem Gerät offen sind, sonst sind die Interaktions-Buttons nicht sichtbar!</string>
    <string name="simulation_addRandomParticipant">Weiteren Test-Teilnehmer zum Spiel \'Testspiel\' hinzufügen</string>
    <string name="simulation_testuserid2">testuser2_id</string>
    <string name="simulation_removeRandomParticipant">Test-Teilnehmer vom Spiel \'Testspiel\' entfernen</string>
    <string name="simulation_finish">Simulation beenden</string>


</resources>
