<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimulationActivity">

    <TextView
        android:id="@+id/simulation_text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simulation_explanation"/>
    <Button
        android:id="@+id/simulation_button_1"
        android:layout_below="@id/simulation_text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simulation_addTestGame"/>
    <Button
        android:id="@+id/simulation_button_2"
        android:layout_below="@id/simulation_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simulation_addParticipant"/>
    <TextView
        android:id="@+id/simulation_text_2"
        android:layout_below="@id/simulation_button_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <Button
        android:id="@+id/simulation_button_3"
        android:layout_below="@id/simulation_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simulation_addRandomParticipant"/>
    <Button
        android:id="@+id/simulation_button_4"
        android:layout_below="@id/simulation_button_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simulation_removeRandomParticipant"/>

</RelativeLayout>