<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_gravity="center"
    tools:context=".AccountActivity"
    android:weightSum="3"
    android:orientation="vertical">



    <TextView
        android:id="@+id/textViewAccount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/account_text"
        android:textSize="22sp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:background="@color/green"
        android:layout_margin="@dimen/margin_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/textview_account_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/email"
        android:textSize="26sp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:background="@color/purple"
        android:layout_margin="@dimen/margin_item"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_item">

        <Button
        android:id="@+id/account_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/red"
        android:text="@string/sign_out"
        android:layout_weight="1"
        android:layout_marginRight="@dimen/margin_item"/>

        <Button
        android:id="@+id/account_button_back"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/back"
        android:layout_weight="1"
        android:background="@color/green"
        android:layout_marginLeft="@dimen/margin_item"/>

    </LinearLayout>




</LinearLayout>