<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewGameActivity"
    android:fitsSystemWindows="true"
    android:id="@+id/newGameDrawerLayout">

    <!--Quelle fürs Layout: Lösung zur Übungsaufgabe "LaufApp"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:hint="@string/what_game"
        android:singleLine="true"
        android:textAlignment="center"
        android:background="@color/green"
        android:layout_margin="@dimen/margin_item"
        android:textCursorDrawable="@color/purple"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">





    <Button
        android:id="@+id/input_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"

        android:text="@string/hint_date"
        android:singleLine="true"
        android:background="@color/green"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin_item"/>



    <Button
        android:id="@+id/input_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_time"
        android:singleLine="true"
        android:background="@color/green"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin_item"/>





        </LinearLayout>

        <Button
            android:id="@+id/button_find_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_place"
            android:background="@color/green"
            android:layout_margin="@dimen/margin_item"
            />


    <Button
        android:id="@+id/button_make_new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_new_game"
        android:background="@color/purple"
        android:layout_margin="@dimen/margin_item"
        android:textColor="@color/white"
       />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu_new_game_activity"
        android:layout_gravity="left">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>